Improve digitToCLocale sign char handling

This patch adds more char tests for the plus and minus signs to
ensure that e.g. number input widgets can be used with the locale
and the known sign chars.

[ChangeLog][QtCore] Fixed a bug that caused negative number input
using '-' to be rejected because the current locale uses e.g. 0x2212.
QIntValidator and QDoubleValidator now accepts both signs as well as
the locale minus sign.

Task-number: QTBUG-35069
(cherry picked from commit qtbase/dc80838a378268a13ccbe74b481528f1ad631918)
Change-Id: I924bebe51028c58454eb864ad07d4af5efe3b5c9
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit efce5d8361af41bf60dd16ce5aec65fe2fd84f88)

Conflicts:
	src/corelib/tools/qlocale_p.h